force-app/main/default/objects/Account/fields/Safmarine_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Safmarine_Value_Proposition__c</fullName>
    <description>Created as part of #RQ-004311 - Add Segments to Account</description>
    <label>z_Safmarine Value Proposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confidence</fullName>
            </value>
            <value>
                <fullName>Consistency</fullName>
            </value>
            <value>
                <fullName>Encouragement</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Freedom</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>