force-app/main/default/objects/Account/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <description>SFSE-10947: This field is used to classify our customers so that Sales can target them with the right offering. It is updated from external data sources.</description>
    <inlineHelpText>Sales Channel refers to our new sales organization setup and considers how we interact with the account: Key Client/Runway, Integrated Sales, or Direct Transport Sales</inlineHelpText>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Channel</valueSetName>
    </valueSet>
</CustomField>