force-app/main/default/objects/Account/fields/Sales_Engagement_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engagement_Intensity__c</fullName>
    <description>RQ-004027 : Average sales engagement intensity (number of sales calls per year) for an account .</description>
    <inlineHelpText>Low (16 sales calls per year)
Medium (24 sales calls per year) 
High (32 sales calls per year)</inlineHelpText>
    <label>Sales Engagement Intensity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>