force-app/main/default/objects/Account/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <description>Used to populate the corresponding sales group name based on the area</description>
    <inlineHelpText>Depicts sales group responsibility. Only currently applicable to OTS</inlineHelpText>
    <label>Sales Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>