force-app/main/default/objects/Account/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <description>Visible only to SCL reps.
#RQ-000235 - Help text added.</description>
    <inlineHelpText>Sales Office where Safmarine Account Owner is based.</inlineHelpText>
    <label>z_Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BEANT</fullName>
            </value>
            <value>
                <fullName>GBBFS</fullName>
            </value>
            <value>
                <fullName>GBLDN</fullName>
            </value>
            <value>
                <fullName>INAMD</fullName>
            </value>
            <value>
                <fullName>INCCU</fullName>
            </value>
            <value>
                <fullName>INCOK</fullName>
            </value>
            <value>
                <fullName>INJAI</fullName>
            </value>
            <value>
                <fullName>INJHT</fullName>
            </value>
            <value>
                <fullName>INKRQ</fullName>
            </value>
            <value>
                <fullName>INMAA</fullName>
            </value>
            <value>
                <fullName>INNWD</fullName>
            </value>
            <value>
                <fullName>INTUT</fullName>
            </value>
            <value>
                <fullName>ZACPT</fullName>
            </value>
            <value>
                <fullName>ZADUR</fullName>
            </value>
            <value>
                <fullName>ZAEBS</fullName>
            </value>
            <value>
                <fullName>ZAJNB</fullName>
            </value>
            <value>
                <fullName>ZAP1R</fullName>
            </value>
            <value>
                <fullName>ZAPLZ</fullName>
            </value>
            <value>
                <fullName>ZAPOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>