force-app/main/default/objects/Account/fields/Sales_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Name__c</fullName>
    <description>Visible only to SCL reps.
#RQ-000235 - Help text added.</description>
    <formula>case ( Sales_Office__c ,
&apos;BEANT&apos;,&apos;ANTWERP&apos;,
&apos;GBBFS&apos;,&apos;BELFAST, NORTHERN IRELAND&apos;,
&apos;GBLDN&apos;,&apos;LONDON&apos;,
&apos;INAMD&apos;,&apos;AHMEDABAD&apos;,
&apos;INCCU&apos;,&apos;KOLKATA&apos;,
&apos;INCOK&apos;,&apos;COCHIN&apos;,
&apos;INJAI&apos;,&apos;JAIPUR&apos;,
&apos;INJHT&apos;,&apos;JAWAHARLAL NEHRU&apos;,
&apos;INKRQ&apos;,&apos;LUDHIANA&apos;,
&apos;INMAA&apos;,&apos;CHENNAI&apos;,
&apos;INNWD&apos;,&apos;NEW DELHI&apos;,
&apos;INTUT&apos;,&apos;TUTICORIN&apos;,
&apos;ZACPT&apos;,&apos;CAPE TOWN&apos;,
&apos;ZADUR&apos;,&apos;DURBAN&apos;,
&apos;ZAEBS&apos;,&apos;EAST LONDON&apos;,
&apos;ZAJNB&apos;,&apos;JOHANNESBURG&apos;,
&apos;ZAP1R&apos;,&apos;PRETORIA&apos;,
&apos;ZAPLZ&apos;,&apos;PORT ELIZABETH&apos;,
&apos;ZAPOT&apos;,&apos;POTCHEFSTROOM&apos;,
&apos;&apos;,&apos;&apos;,
&apos;Unknown Sales Office Code&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Office where Safmarine Account Owner is based.</inlineHelpText>
    <label>z_Sales Office Name</label>
    <type>Text</type>
</CustomField>