force-app/main/default/objects/Account/fields/SCV_Code__c.field-meta.xml
<CustomField>
    <fullName>SCV_Code__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++
Do not change this field without reviewing impact with master data integration&quot; .
Unique customer number shared across numerous Maersk systems. Populated by custom Java components in the middleware layer. Should be read-only to users using FLS so there is no chance of modification by anyone other than the Master Data Interface User.
#RQ-002042-Reduced the text characters to 11
#RQ-004927.</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal system identifier from SCV</inlineHelpText>
    <label>SCV Code</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>