force-app/main/default/objects/Account/fields/SCV_Status__c.field-meta.xml
<CustomField>
    <fullName>SCV_Status__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot;
#RQ-000235 - Help text added.
#RQ-004162 - Changed Field label and help text
#RQ-004927.</description>
    <inlineHelpText>Indicates if this customer is active or not as per Customer Master Data definitions</inlineHelpText>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>