force-app/main/default/objects/Account/fields/SEA_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>SEA_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#PR-0031_2 - Sealand Integration. This field is used to store the sealand account Owner</description>
    <inlineHelpText>The SeaLand sales person responsible for this Account.</inlineHelpText>
    <label>Sealand Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Please select an Internal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_SEA_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>