force-app/main/default/objects/Account/fields/Seago_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Seago_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#PR-0055 - Seago Line Integration. This field is used to store the Seago Line Account Owner. 
#RQ-003201 - Look into the current Apex Errors we are receiving.</description>
    <inlineHelpText>The Seago Line sales person responsible for this Account.</inlineHelpText>
    <label>Seago Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Please select an Internal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_SGL_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>