force-app/main/default/objects/Account/fields/Search_User__c.field-meta.xml
<CustomField>
    <fullName>Search_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>