force-app/main/default/objects/Account/fields/Sent_to_SCV_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_SCV_Team_Date__c</fullName>
    <label>Sent to SCV Team Date</label>
    <type>DateTime</type>
</CustomField>