force-app/main/default/objects/Account/fields/Service_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Number__c</fullName>
    <label>Service Contract Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>