force-app/main/default/objects/Account/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <description>RQ-009401</description>
    <inlineHelpText>Indicates the sub-segment within the Efficiency Value Proposition</inlineHelpText>
    <label>Sub Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Medium Forwarder</fullName>
            </value>
            <value>
                <fullName>Local Champion</fullName>
            </value>
            <value>
                <fullName>Global Freight Forwarder</fullName>
            </value>
            <value>
                <fullName>Specialised Forwarder</fullName>
            </value>
            <value>
                <fullName>Digital Innovator</fullName>
            </value>
            <value>
                <fullName>BIG BCO specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>