force-app/main/default/objects/Account/fields/Sync_to_SFMC__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_SFMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RQ-013401 : Marketing Cloud Account/Contact Sync flag</description>
    <label>Sync to SFMC</label>
    <type>Checkbox</type>
</CustomField>