force-app/main/default/objects/Account/fields/Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Account__c</fullName>
    <description>#Case_Mgt_v1: Field used on the publisher layout to select the record type. This field in turn used update the record type of the account through WF&apos;s</description>
    <label>Type of Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-shipping Party Account</fullName>
            </value>
            <value>
                <fullName>Draft Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>