force-app/main/default/objects/Account/fields/Value_Proposition1__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition1__c</fullName>
    <description>RQ-007289 : Streamline Value Proposition</description>
    <label>z_Value Proposition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Business Partner-MSL</fullName>
            </value>
            <value>
                <fullName>Ambition-MSL</fullName>
            </value>
            <value>
                <fullName>Advancement-MSL</fullName>
            </value>
            <value>
                <fullName>Ease-MSL</fullName>
            </value>
            <value>
                <fullName>Efficiency-MSL</fullName>
            </value>
            <value>
                <fullName>Expertise-MSL</fullName>
            </value>
            <value>
                <fullName>SELF SERVICE-MSL</fullName>
            </value>
            <value>
                <fullName>Super Saver-MSL</fullName>
            </value>
            <value>
                <fullName>Expertise-SEA</fullName>
            </value>
            <value>
                <fullName>Ambition-MCC</fullName>
            </value>
            <value>
                <fullName>Super Saver-MCC</fullName>
            </value>
            <value>
                <fullName>Expertise-MCC</fullName>
            </value>
            <value>
                <fullName>Advancement-MCC</fullName>
            </value>
            <value>
                <fullName>Ease-MCC</fullName>
            </value>
            <value>
                <fullName>Joint Business Partner-MCC</fullName>
            </value>
            <value>
                <fullName>Self Service-MCC</fullName>
            </value>
            <value>
                <fullName>Efficiency-MCC</fullName>
            </value>
            <value>
                <fullName>Advancement-SCL</fullName>
                <isActive>false</isActive>
                <label>Advancement-SCL</label>
            </value>
            <value>
                <fullName>Advancement-SEA</fullName>
                <isActive>false</isActive>
                <label>Advancement-SEA</label>
            </value>
            <value>
                <fullName>Ambition-SCL</fullName>
                <isActive>false</isActive>
                <label>Ambition-SCL</label>
            </value>
            <value>
                <fullName>Ambition-SEA</fullName>
                <isActive>false</isActive>
                <label>Ambition-SEA</label>
            </value>
            <value>
                <fullName>Ease-SCL</fullName>
                <isActive>false</isActive>
                <label>Ease-SCL</label>
            </value>
            <value>
                <fullName>Ease-SEA</fullName>
                <isActive>false</isActive>
                <label>Ease-SEA</label>
            </value>
            <value>
                <fullName>Efficiency-SCL</fullName>
                <isActive>false</isActive>
                <label>Efficiency-SCL</label>
            </value>
            <value>
                <fullName>Efficiency-SEA</fullName>
                <isActive>false</isActive>
                <label>Efficiency-SEA</label>
            </value>
            <value>
                <fullName>Encouragement-SCL</fullName>
                <isActive>false</isActive>
                <label>Encouragement-SCL</label>
            </value>
            <value>
                <fullName>Expertise-SCL</fullName>
                <isActive>false</isActive>
                <label>Expertise-SCL</label>
            </value>
            <value>
                <fullName>Joint Business Partner-SEA</fullName>
                <isActive>false</isActive>
                <label>Joint Business Partner-SEA</label>
            </value>
            <value>
                <fullName>SELF SERVICE-SCL</fullName>
                <isActive>false</isActive>
                <label>SELF SERVICE-SCL</label>
            </value>
            <value>
                <fullName>Self Service-SEA</fullName>
                <isActive>false</isActive>
                <label>Self Service-SEA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>