force-app/main/default/objects/Account/fields/Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition__c</fullName>
    <description>+++ INTEGRATION: SFMC +++
Do not change this field without reviewing impact with Marketing cloud&quot; .
Existing contact report that feeds SFMC may need to be changed</description>
    <label>Value Proposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Value_Proposition</valueSetName>
    </valueSet>
</CustomField>