force-app/main/default/objects/Account/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-007439</description>
    <externalId>true</externalId>
    <label>Vendor Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>