force-app/main/default/objects/Account/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <description>#RQ-007439</description>
    <inlineHelpText>Specify the Vendor Type.</inlineHelpText>
    <label>Vendor Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Chassis</fullName>
            </value>
            <value>
                <fullName>Customs House Brokerage (CHB)</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Equipment Repair</fullName>
            </value>
            <value>
                <fullName>LCL Hubs</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Special Provider</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Trucker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>