force-app/main/default/objects/Account/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++
Do not change this field without reviewing impact with master data integration</description>
    <inlineHelpText>Sales vertical that the account is assigned to in Maersk</inlineHelpText>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Vertical</valueSetName>
    </valueSet>
</CustomField>