force-app/main/default/objects/Account/recordTypes/Client_Account.recordType-meta.xml
<RecordType>
    <fullName>Client_Account</fullName>
    <active>true</active>
    <description>Client Accounts are customers who place bookings with the company and WILL have an SCV code. Client Accounts are mastered in SCV.</description>
    <label>Client Account</label>
</RecordType>