force-app/main/default/objects/Account/recordTypes/Competitor_Account.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Account</fullName>
    <active>true</active>
    <description>Use Competitor Accounts to track our competitors so that we can link to them from other parts of the system such as business planning.</description>
    <label>Competitor Account</label>
</RecordType>