force-app/main/default/objects/Account/recordTypes/Concern_Account.recordType-meta.xml
<RecordType>
    <fullName>Concern_Account</fullName>
    <active>true</active>
    <description>Concern Accounts are the Parents of Clients customers who place bookings with the company and WILL have an SCV code (begining with ***). Concerns are mastered in SCV.</description>
    <label>Concern Account</label>
</RecordType>