force-app/main/default/objects/Account/recordTypes/Draft_Account.recordType-meta.xml
<RecordType>
    <fullName>Draft_Account</fullName>
    <active>true</active>
    <description>Draft Accounts are new customers who have never done business with the company and so do not have an SCV code but need Quotes issued to them.</description>
    <label>Draft Account</label>
</RecordType>