force-app/main/default/objects/Account/recordTypes/Inactive_Account.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Account</fullName>
    <active>true</active>
    <description>These represents inactive accounts</description>
    <label>Inactive Account</label>
</RecordType>