force-app/main/default/objects/Account/recordTypes/Unassigned.recordType-meta.xml
<RecordType>
    <fullName>Unassigned</fullName>
    <active>true</active>
    <description>Unassigned Accounts are dummy Accounts used for budgeting and targeting purposes and are not real customers.</description>
    <label>Unassigned</label>
</RecordType>