force-app/main/default/objects/Account/recordTypes/X3rd_Party_Account.recordType-meta.xml
<RecordType>
    <fullName>X3rd_Party_Account</fullName>
    <active>true</active>
    <description>Use this to track Non-shipping Party involved in Cases. These are NOT customers and do NOT have an SCV number. They could be Truckers, Customs Offices and other NON-customers that may be involved in Cases.</description>
    <label>Non-shipping Party Account</label>
</RecordType>