force-app/main/default/objects/Account/validationRules/Required_Fields_for_Competitor_RecordTyp.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_for_Competitor_RecordTyp</fullName>
    <active>true</active>
    <description>Validate Street,City and Postal Code for Competitor RecordType</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Competitor_Account&quot;,
!$Setup.Validation_Rules_Bypass__c.Active__c,
OR(
ISBLANK( BillingStreet),
ISBLANK( BillingCity),
ISBLANK( BillingPostalCode)
)
)</errorConditionFormula>
    <errorMessage>Street,City and Postal Code Cannot be empty for Competior record type .</errorMessage>
</ValidationRule>