force-app/main/default/objects/Account/listViews/Accounts_Seago_NL.listView-meta.xml
<ListView>
    <fullName>Accounts_Seago_NL</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>SCV_Code__c</columns>
    <columns>Seago_Account_Owner__c</columns>
    <columns>Value_Proposition__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Seago_Account_Owner__c</field>
        <operation>contains</operation>
        <value>mert latif</value>
    </filters>
    <label>Accounts Seago NL</label>
</ListView>